# GridPolator

./: Cargo.toml  environment.yml  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py
.github/workflows/: build-docs.yml  publish-to-pypi.yml  python-package-conda.yml
0.4.0/: .buildinfo  api.html  genindex.html  index.html  intro.html  py-modindex.html  search.html  searchindex.js  sg_execution_times.html
0.4.0/_sources/: sg_execution_times.rst.txt
0.4.0/api/: GridPolator.GridSpectra.html
0.4.0/auto_examples/: index.html  plot_compare_jax_scipy.html  plot_intro_to_grids.html  plot_use_st_grid.html  plot_use_vspec_grid.html  sg_execution_times.html
0.4.1/: .buildinfo  api.html  genindex.html  index.html  intro.html  py-modindex.html  search.html  searchindex.js  sg_execution_times.html
0.4.1/_sources/: sg_execution_times.rst.txt
0.4.1/api/: GridPolator.GridSpectra.html
0.4.1/auto_examples/: index.html  plot_compare_jax_scipy.html  plot_intro_to_grids.html  plot_use_st_grid.html  plot_use_vspec_grid.html  (+1 more)
GridPolator/: __init__.py  binning.py  config.py  grid.py  phoenix.py
develop/: .buildinfo  api.html  genindex.html  index.html  intro.html  objects.inv  py-modindex.html  search.html  searchindex.js  sg_execution_times.html
docs/: readme.rst
examples/: plot_compare_jax_scipy.py  plot_use_vspec_grid.py
latest/: .buildinfo  index.html  py-modindex.html  searchindex.js  sg_execution_times.html
src/: binning.rs  lib.rs  main.rs
test/: test_binning.py  test_config.py  test_grid.py  test_phoenix_st.py  test_phoenix_vspec.py
(+94 files in other folders)
